# brish

./: .gitignore  README.md  private.org  pyproject.toml  readme.org  setup.py
brish/: __init__.py  __main__.py  brish.zsh  brish2.zsh  brishmod.py  brishz.py
private/: docs.org  related.md
tests/: ast.ipynb  test_brish.py  test_tangled1.py
