[tool.poetry]
name = "brish"
version = "0.2.1"
description = "A bridge between zsh and Python."
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
exclude = ["__pycache__"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
IPython = ">6" # Dev
ipydex = "^0.10.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
