[tool.poetry]
name = "brish"
version = "0.2.6"
description = "A bridge between zsh and Python."
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
exclude = ["__pycache__"]

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"

[tool.poetry.dev-dependencies]
pytest = "==6.*,>=5.2.0"
IPython = ">6" # Dev
ipydex = "==0.*,>=0.10.5"






[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
