[tool.poetry]
name = "brish"
version = "0.3.5"
description = "A bridge between zsh and Python."
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
repository = "https://github.com/NightMachinary/brish"
exclude = ["__pycache__"]

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"
icecream = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "==6.*,>=5.2.0"
IPython = ">6" # Dev
ipydex = "==0.*,>=0.10.5"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
